advance in home

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
 html {
   background-color: #fff1e6;
   min-width: 100%;
-  overflow: hidden;
 }
 
 .App {
   width: 100vw;
-  height: 100vh;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
