--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -6,8 +6,8 @@
   letter-spacing: 10px;
   padding-left: 17px;
   background: transparent;
-  color: #43bccd;
-  border: 5px solid #43bccd;
+  color: #e0afa0;
+  border: 5px solid #e0afa0;
 }
 .button-start:hover {
   transform: translateY(-5px);
