--- a/src/components/Arrows/style.css
+++ b/src/components/Arrows/style.css
@@ -2,7 +2,7 @@
   width: 50%;
   display: flex;
   justify-content: space-between;
-  position: sticky;
+  position: fixed;
   top: 80%;
   left: 24%;
 }
