--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -10,8 +10,8 @@
 }
 .projects {
   display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   margin-top: 2em;
   flex-direction: column;
 }
@@ -19,26 +19,35 @@
   width: 80%;
   position: relative;
   box-shadow: 1px 2px 3px #999;
+  transition: all 500ms ease-out;
+  margin: 2em;
 }
 .text_projects{
   position: absolute;
   visibility: hidden;
-  bottom: 25%;
-  left: 25%;
+  top: 0;
   font-family: "Inconsolata", monospace;
   text-align: center;
   color: white;
   font-size: 30px;
-  width: 50%; 
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background: rgba(0,0,0, 0.6); 
+  transition: all 500ms ease-out;
+  margin: 0 !important;
+display: flex;
+align-items: center;
 }
 
-.image_project:hover .text_projects{
+.image_project:hover > .text_projects{
   visibility: visible;
+  opacity: 1;
 }
 .hover{ 
   width: 100%;
 }
-.hover:hover {
+/* .hover:hover {
   filter: brightness(0.4);
   transition: 300ms;
-}
+} */
