--- a/src/components/Arrows/style.css
+++ b/src/components/Arrows/style.css
@@ -1,10 +1,18 @@
-.arrows {
+.arrowsDown {
   width: 50%;
   display: flex;
   justify-content: space-between;
   position: fixed;
   top: 80%;
   left: 24%;
+}
+.arrowsUp{
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  left: 25%;
 }
 .arrow {
   width: 6em;
