--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -21,6 +21,7 @@
   box-shadow: 1px 2px 3px #999;
   transition: all 500ms ease-out;
   margin: 2em;
+  cursor: pointer;
 }
 .text_projects{
   position: absolute;
@@ -38,9 +39,14 @@
   margin: 0 !important;
 display: flex;
 align-items: center;
+cursor: pointer;
 }
 
 .image_project:hover > .text_projects{
+  visibility: visible;
+  opacity: 1;
+}
+.image_project:hover > .button_projects{
   visibility: visible;
   opacity: 1;
 }
@@ -51,3 +57,15 @@ align-items: center;
   filter: brightness(0.4);
   transition: 300ms;
 } */
+.button_projects{
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  transition: all 500ms ease-out;
+  background-color: transparent;
+  border: 4px solid white;
+  color: white;
+  width: 2em;
+  height: 1em;
+}
