--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -1,5 +1,4 @@
-.container_contact {
-  content: "";
+.container_form {
   width: 100%;
   height: 80vh;
   display: flex;
@@ -47,4 +46,11 @@
 .button_submit_contact:hover {
   transform: translateY(-5px);
   filter: invert(100%);
+}
+.social_medias {
+  z-index: 6;
+  width: 15%;
+  display: flex;
+  justify-content: space-evenly;
+  align-self: flex-end;
 }
