--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -23,7 +23,7 @@
   margin: 2em;
   cursor: pointer;
 }
-.text_projects{
+.text_projects {
   position: absolute;
   visibility: hidden;
   top: 0;
@@ -34,30 +34,30 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  background: rgba(0,0,0, 0.6); 
+  background: rgba(0, 0, 0, 0.6);
   transition: all 500ms ease-out;
   margin: 0 !important;
-display: flex;
-align-items: center;
-cursor: pointer;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
-.image_project:hover > .text_projects{
+.image_project:hover > .text_projects {
   visibility: visible;
   opacity: 1;
 }
-.image_project:hover > .button_projects{
+.image_project:hover > .button_projects {
   visibility: visible;
   opacity: 1;
 }
-.hover{ 
+.hover {
   width: 100%;
 }
 /* .hover:hover {
   filter: brightness(0.4);
   transition: 300ms;
 } */
-.button_projects{
+.button_projects {
   position: absolute;
   top: 0;
   left: 0;
