--- a/src/components/Skills/style.css
+++ b/src/components/Skills/style.css
@@ -21,6 +21,9 @@
   top: 80%;
   left: 51%;
 }
+.presskeyup {
+  transform: translateY(calc(-15vh + 46px));
+}
 .icon {
   width: 100%;
 }
@@ -34,9 +37,6 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-}
-.presskeyup {
-  transform: translateY(-50px);
 }
 .arrowUp {
   visibility: hidden;
