--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,15 @@ html {
   min-width: 100%;
   color: transparent;
   text-shadow: 0 0 0 #000000;
+  overflow-x: hidden;
 }
 *:focus {
   outline: none;
+}
+body {
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
 }
 html::before {
   content: "";
