--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -19,7 +19,6 @@
   height: 60%;
   z-index: 5;
 }
-
 .input {
   margin: 1em;
   border-radius: 5px;
@@ -40,17 +39,27 @@
   background: transparent;
   color: #e0afa0;
   border: 4px solid #e0afa0;
-  z-index: 5;
+  z-index: 20;
   cursor: pointer;
 }
 .button_submit_contact:hover {
   transform: translateY(-5px);
   filter: invert(100%);
 }
-.social_medias {
-  z-index: 6;
-  width: 15%;
-  display: flex;
-  justify-content: space-evenly;
-  align-self: flex-end;
+
+@media (max-width: 750px) {
+  .send_email {
+    width: 70%;
+    justify-content: flex-start;
+    margin: 0.5em;
+  }
+  .input {
+    margin: 0.2em;
+  }
+  .container_form h1 {
+    font-size: 18px;
+  }
+  .message {
+    height: 35%;
+  }
 }
