--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -52,6 +52,7 @@
     width: 70%;
     justify-content: flex-start;
     margin: 0.5em;
+    height: fit-content;
   }
   .input {
     margin: 0.2em;
