--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -11,7 +11,7 @@
 }
 .social_medias {
   z-index: 10;
-  width: 25%;
+  width: 20%;
   display: flex;
   justify-content: space-evenly;
   align-self: flex-start;
@@ -27,4 +27,13 @@
 .text_footer {
   font-family: "Inconsolata", monospace;
   margin-right: 1em;
+  width: 25%;
+}
+@media (max-width: 750px) {
+  .social_medias {
+    width: 25%;
+  }
+  .text_footer {
+    width: fit-content;
+  }
 }
