--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -23,3 +23,9 @@
   top: 10%;
   right: 3%;
 }
+@media (max-width: 750px) {
+  .presentation h2 {
+    font-size: 16px;
+    width: 90% !important;
+  }
+}
