--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -40,6 +40,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  justify-content: center;
 }
 @media (max-width: 750px) {
   .text_projects {
