--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -20,9 +20,15 @@
   position: relative;
   box-shadow: 1px 2px 3px #999;
   transition: all 500ms ease-out;
+
   margin: 2em;
   cursor: pointer;
 }
+.margin {
+  width: 100%;
+  height: 3em;
+}
+
 .text_projects {
   position: absolute;
   visibility: hidden;
@@ -56,6 +62,9 @@
   }
   .image_project {
     box-shadow: 0px 0px 0px;
+  }
+  .margin {
+    height: 10em;
   }
 }
 @media (min-width: 750px) {
